Fixed main image size problems on narrow screens

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ code {
     monospace;
 }
 
+.my_face {
+  max-width: 80%;
+}
 
 .social-container {
 }
